@@ -1,3 +1,8 @@
+2008-10-31		olivier
+
+	* dialogs/keyboard-settings/xfce-keyboard-settings.c: Disable keyboard
+	  layout frames when system default is active.
+
 2008-10-20		olivier
 
 	* dialogs/keyboard-settings/xfce-keyboard-settings.c,
